--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="header-content">
                 <a href="/" class="logo"><img src="logo.png" alt="5bestcasinos" width="100" srcset=""></a>
                 <nav class="nav">
-                    <a href="#inicio">Inicio</a>
-                    <a href="#sobre-nosotros">Sobre Nosotros</a>
-                    <a href="#servicios">Servicios</a>
-                    <a href="#casinos">Casinos</a>
-                    <a href="#contacto">Contacto</a>
+                    <a href="/#inicio">Inicio</a>
+                    <a href="/#sobre-nosotros">Sobre Nosotros</a>
+                    <a href="/#servicios">Servicios</a>
+                    <a href="/#casinos">Casinos</a>
+                    <a href="/#contacto">Contacto</a>
                 </nav>
                 <button class="mobile-menu" onclick="toggleMobileMenu()">☰</button>
             </div>
@@ -323,7 +323,7 @@
                 <div class="footer-section">
                     <h3>Información legal</h3>
                     <ul>
-                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="/termsandcondition.html">Términos y Condiciones</a></li>
                         <li><a href="#">Política de Privacidad</a></li>
                         <!-- <li><a href="#">Juego Responsable</a></li> -->
                         <li><a href="#">Contacto</a></li>
