--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <h3>Información legal</h3>
                     <ul>
                         <li><a href="/termsandcondition.html">Términos y Condiciones</a></li>
-                        <li><a href="#">Política de Privacidad</a></li>
+                        <li><a href="/privacy-policy.html">Política de Privacidad</a></li>
                         <!-- <li><a href="#">Juego Responsable</a></li> -->
                         <li><a href="#">Contacto</a></li>
                     </ul>
